Ajout des synthèse vidéo

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
                      Chapitre 5 , 6 Management
                   </a>
                </li>
+               <li>
+                  <a href="./Synthèse_vidéo/theme1.html">
+                     <div class="icon">
+                        <span class="fas fa-play"></span>
+                     </div>
+                     Synthèse en vidéo
+                  </a>
+               </li>
             </ul>
             <!-- Thème 2 Menu-items -->
             <ul class="menuth2">
@@ -117,6 +125,14 @@
                         <span class="fas fa-address-book"></span>
                      </div>
                      Chapitre 5 Management
+                  </a>
+               </li>
+               <li>
+                  <a href="./Synthèse_vidéo/theme2.html">
+                     <div class="icon">
+                        <span class="fas fa-play"></span>
+                     </div>
+                     Synthèse en vidéo
                   </a>
                </li>
                
