Ajout des synthèse vidéo

--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
                      Chapitre 5 , 6 Management
                   </a>
                </li>
+               <li>
+                  <a href="./Synthèse_vidéo/theme3.html">
+                     <div class="icon">
+                        <span class="fas fa-play"></span>
+                     </div>
+                     Synthèse en vidéo
+                  </a>
+               </li>
             </ul>
             <!-- Thème 4 Menu-items -->
             <ul class="menuth4">
