--- a/Synthèse_vidéo/theme2.html
+++ b/Synthèse_vidéo/theme2.html
@@ -2,41 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Video.js Custom Skin Example</title>
-  <link rel="stylesheet" href="./style.css">
+  <title>Thème 2 Synthèse Vidéo</title>
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<!-- Not including the default CSS -->
-<!--<link href="https://vjs.zencdn.net/4.0.4/video-js.css" rel="stylesheet"> -->
-<script src="https://vjs.zencdn.net/4.0.4/video.js"></script>
-
-  <video id="my_video_1" class="video-js vjs-default-skin" 
-      controls preload="none" width="640px" height="267px" data-setup='{}'
-      poster='http://video-js.zencoder.com/oceans-clip.jpg'>
-    <source src="../theme2.mp4" type='video/mp4' />
-  </video>
-     
-<style>
-  /* Show the controls (hidden at the start by default) */
-  .video-js .vjs-control-bar { display: block; }
-  
-    /* Make the CDN fonts accessible from the CSS */
-  @font-face {
-    font-family: 'VideoJS';
-    src: url('https://vjs.zencdn.net/f/1/vjs.eot');
-    src: url('https://vjs.zencdn.net/f/1/vjs.eot?#iefix') format('embedded-opentype'), 
-      url('https://vjs.zencdn.net/f/1/vjs.woff') format('woff'),     
-      url('https://vjs.zencdn.net/f/1/vjs.ttf') format('truetype');
-  }
-
-  /* Make the demo a little prettier */
-  body { background: #222; text-align: center; }
-  .video-js { margin: 20px auto; }
-
-</style>
-<!-- partial -->
-  
+  <div>
+   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+   src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFAmHUHzRY&#x2F;watch?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+ </div>  
 </body>
 </html>
