Ajouts des définitions QUIZLET

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
    <head>
       <meta charset="utf-8">
-      <title>Advanced Drop-down Menu | CodingNepal</title>
+      <title>Révisions CEJM 2022</title>
       <link rel="stylesheet" href="style.css">
       <script src="https://kit.fontawesome.com/9fe0f6ef1b.js" crossorigin="anonymous"></script>
    </head>
@@ -99,6 +99,14 @@
                      Synthèse en vidéo
                   </a>
                </li>
+               <li>
+                  <a href="./TH1/quizth1.html">
+                     <div class="icon">
+                        <span class="fas fa-question-circle"></span>
+                     </div>
+                     Quizz
+                  </a>
+               </li>
             </ul>
             <!-- Thème 2 Menu-items -->
             <ul class="menuth2">
@@ -133,6 +141,14 @@
                         <span class="fas fa-play"></span>
                      </div>
                      Synthèse en vidéo
+                  </a>
+               </li>
+               <li>
+                  <a href="./TH2/quizth2.html">
+                     <div class="icon">
+                        <span class="fas fa-question-circle"></span>
+                     </div>
+                     Quizz
                   </a>
                </li>
                
@@ -172,6 +188,14 @@
                      Synthèse en vidéo
                   </a>
                </li>
+               <li>
+                  <a href="./TH3/quizth3.html">
+                     <div class="icon">
+                        <span class="fas fa-question-circle"></span>
+                     </div>
+                     Quizz
+                  </a>
+               </li>
             </ul>
             <!-- Thème 4 Menu-items -->
             <ul class="menuth4">
@@ -198,6 +222,14 @@
                         <span class="fas fa-address-book"></span>
                      </div>
                      Chapitre 5 Management
+                  </a>
+               </li>
+               <li>
+                  <a href="./TH4/quizth4.html">
+                     <div class="icon">
+                        <span class="fas fa-question-circle"></span>
+                     </div>
+                     Quizz
                   </a>
                </li>
             </ul>
@@ -228,6 +260,14 @@
                      Chapitre 5 , 6 Management
                   </a>
                </li>
+               <li>
+                  <a href="./TH5/quizth5.html">
+                     <div class="icon">
+                        <span class="fas fa-question-circle"></span>
+                     </div>
+                     Quizz
+                  </a>
+               </li>
             </ul>
             <!-- Thème 5 Menu-items -->
             <ul class="menuth6">
@@ -238,6 +278,14 @@
                         <span class="fas fa-address-book"></span>
                      </div>
                      Chapitre 1 , 2 , 3 Management
+                  </a>
+               </li>
+               <li>
+                  <a href="./TH6/quizth6.html">
+                     <div class="icon">
+                        <span class="fas fa-question-circle"></span>
+                     </div>
+                     Quizz
                   </a>
                </li>
             </ul>
