--- a/TH2/quizth2.html
+++ b/TH2/quizth2.html
@@ -11,5 +11,6 @@
 <body>
     
     <iframe src="https://quizlet.com/700119922/flashcards/embed?i=3btysi&x=1jj1" height="500" width="60%" style="border:0"></iframe>
+    <button class="retour" onclick="window.location.href='../index.html'">Retour</a></button>
 </body>
 </html>
