--- a/TH4/quizth4.html
+++ b/TH4/quizth4.html
@@ -11,5 +11,7 @@
 <body>
     
     <iframe src="https://quizlet.com/700204870/flashcards/embed?i=3btysi&x=1jj1"  height="500" width="40%" style="border:0"></iframe>
+    <button class="retour" onclick="window.location.href='../index.html'">Retour</a></button>
+
 </body>
 </html>
